tests/ui/extern/issue-95829.stderr
error: incorrect function inside `extern` block
  --> $DIR/issue-95829.rs:4:14
   |
LL | extern {
   | ------ `extern` blocks define existing foreign functions and functions inside of them cannot have a body
LL |     async fn L() {
   |              ^ cannot have a body
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html
help: remove the invalid body
   |
LL |     async fn L() ;
   |                  ~

error: functions in `extern` blocks cannot have qualifiers
  --> $DIR/issue-95829.rs:4:5
   |
LL | extern {
   | ------ in this `extern` block
LL |     async fn L() {
   |     ^^^^^
   |
help: remove this qualifier
   |
LL -     async fn L() {
LL +      fn L() {
   |

error: aborting due to 2 previous errors

